tests/baselines/reference/enumWithBigint.errors.txt
enumWithBigint.ts(2,3): error TS2452: An enum member cannot have a numeric name.


==== enumWithBigint.ts (1 errors) ====
    enum E {
      0n = 0,
      ~~
!!! error TS2452: An enum member cannot have a numeric name.
    }
    